Fixes JwtAuthFilter init.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -306,5 +306,5 @@ archivist.pubsub.type = local
 archivist.pubsub.gcp.subscription = subscription
 
 ### The name of the google projcet
-archivist.pubsub.gcs.project = project
+archivist.pubsub.gcp.project = project
 
