Finishes creating the local development environment

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -8,3 +8,4 @@ analyst.scheduler.max-job-age-hours = 24
 logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
 logging.level.com.google.cloud.sql.postgres.SocketFactory=OFF
 
+analyst.config.path=/config
