--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 
 version: '3'
 services:
+
+  ## Unit testing services.
+
+  # Elastic Search instance used by the unit tests.
   test-es:
     build:
       context: elasticsearch
@@ -11,43 +15,76 @@ services:
       - "39300:9300"
     environment:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+
+  # Postgres instance used by the unit tests.
   test-postgres:
     image: "postgres:9.6.9"
     hostname: "localhost"
     ports:
-          - "35432:5432"
+     - "35432:5432"
     environment:
       POSTGRES_PASSWORD: zorroa
       POSTGRES_USER: zorroa
       POSTGRES_DB: zorroa
-  dev-es:
+
+  ## Local Development Services
+
+  # Elastic Search instance used for local devlopment servers.
+  es:
     build:
       context: elasticsearch
       args:
         node_type: single
+    ports:
+      - "9200:9200"
+      - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
-  dev-postgres:
+
+  # Postgres instance used for local devleopment servers.
+  postgres:
     image: "postgres:9.6.9"
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: zorroa
       POSTGRES_USER: zorroa
       POSTGRES_DB: zorroa
-  mvn-build:
-    image: maven:3.5.4-jdk-8
-    command: mvn clean package -Dmaven.test.skip=true
-    working_dir: "/zorroa-server"
-    volumes:
-      - "~/.m2:/root/.m2"
-      - "./:/zorroa-server"
+      PGDATA: /var/lib/postgresql/data/pgdata
+
+  # Local Archivist server.
   archivist:
     links:
-       - "dev-es"
-       - "dev-postgres"
+       - "es"
+       - "postgres"
+       - "analyst"
     build:
       context: archivist
     ports:
       - 8080:8080
+      - 8066:8066
     volumes:
       - "./localdev/zorroa-archivist-config:/config"
+      - "./archivist/target:/service"
 
+  # Local Analyst server.
+  analyst:
+      links:
+         - "es"
+         - "postgres"
+      build:
+        context: analyst
+      ports:
+        - 8082:8066
+      volumes:
+        - "./localdev/zorroa-analyst-config:/config"
+        - "./analyst/target:/service"
+
+  # Builds all java code. Use `docker-compose run build` to rebuild code.
+  build:
+      image: maven:3.5.4-jdk-8
+      command: mvn clean install -Dmaven.test.skip=true
+      working_dir: "/zorroa-server"
+      volumes:
+        - "~/.m2:/root/.m2"
+        - "./:/zorroa-server"
