--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -1,9 +1,9 @@
 ### All this stuff is wrong.
-spring.datasource.url = jdbc:postgresql://dev-postgres/zorroa?currentSchema=zorroa
+spring.datasource.url = jdbc:postgresql://postgres/zorroa?currentSchema=zorroa
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
 
 archivist.storage.type = gcp
 archivist.pubsub.type = gcp
 
-es-routing-service.url = http://dev-es:9200
+es-routing-service.url = http://es:9200
