Major changes to file storage and serving
OFS is now only used as part of the OFSStorageService.  The StorageRouter class
handles all types of storage, local, ofs, gcp, s3, and more!

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -143,7 +143,7 @@ archivist.requests.managerEmail = admin@zorroa.com
 ## General storage settings
 
 ### Type of object storage. The default is a locally running minio server
-archivist.storage.type = minio
+archivist.storage.types = ofs,local
 
 ## Minio Storage Settings
 
