Minor fixes and config changes.

--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -3,7 +3,6 @@ spring.datasource.url = jdbc:postgresql://postgres/zorroa?currentSchema=zorroa
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
 
-archivist.storage.type = gcp
-archivist.pubsub.type = gcp
+archivist.pubsub.types = local,ofs 
 
 es-routing-service.url = http://es:9200
