Fixes EVI-615, need new SAML model.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -7,6 +7,9 @@ archivist.config.path = /config
 
 ## Default Organization Settings
 
+### Set to true for multi-tenant installs
+archivist.organization.multiTenant = false
+
 ### Email domain
 archivist.organization.domain = zorroa.com
 
