--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -75,7 +75,7 @@ archivist.security.saml.baseUrl = http://localhost:8066
 archivist.security.saml.discovery = true
 
 ### SAML keystore path
-archivist.security.saml.keystore.path = config/saml/keystore.jks
+archivist.security.saml.keystore.path = /config/saml/keystore.jks
 
 ### SAML keystore password
 archivist.security.saml.keystore.password = zorroa
