Fixes various bugs found in the export pipeline.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -316,3 +316,9 @@ archivist.pubsub.gcp.subscription = subscription
 ### The name of the google projcet
 archivist.pubsub.gcp.project = project
 
+## Exports
+
+### Export GCS bucket location
+archivist.export.gcs_bucket = gs://rmaas-dit-1-zorroa-exports
+archivist.export.export-root = /tmp
+
