Added support for storing sessions in postgres.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -305,3 +305,17 @@ archivist.pubsub.gcp.subscription = subscription
 ### The name of the google projcet
 archivist.pubsub.gcp.project = project
 
+## Transactional Asset Store settings
+
+### The store type, db or irm
+archivist.assetStore.type = sql
+
+## Session Store
+
+### The session store type
+spring.session.store-type=jdbc
+
+spring.session.jdbc.initialize-schema=always
+
+### The session timeout
+server.servlet.session.timeout=1260
