More fixes for exports.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -314,7 +314,7 @@ archivist.pubsub.gcp.project = project
 ## Exports
 
 ### Export GCS bucket location
-archivist.export.gcs_bucket = gs://rmaas-dit-1-zorroa-exports
+archivist.export.gcs-bucket = gs://rmaas-dit-1-zorroa-exports
 archivist.export.export-root = /tmp
 
 ## Transactional Asset Store settings
