Fixes for various SAML issues, session timeouts, logout button.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -195,12 +195,6 @@ server.http_port=8080
 ### Handle X-Fowarded-For and X-Forwarded-For headers
 server.use-forward-headers=true
 
-### The timeout for inactive sessions.  Timed out sessions are removed.
-server.session.timeout=6000
-
-#### Disable persistent sessions or else startup errors may occur.
-server.session.persistent=false
-
 ### Determines if SSL is enabled or not.
 server.ssl.enabled = false
 
@@ -315,6 +309,7 @@ archivist.pubsub.gcp.project = project
 
 ### Export GCS bucket location
 archivist.export.gcs-bucket = gs://rmaas-dit-1-zorroa-exports
+
 archivist.export.export-root = /tmp
 
 ## Transactional Asset Store settings
@@ -328,7 +323,7 @@ archivist.assetStore.type = sql
 spring.session.store-type=jdbc
 
 ### The session timeout
-spring.session.timeout=1260
+server.servlet.session.timeout=3600
 
 ### Must be set to 'always' for tables to be created.
 spring.session.jdbc.initialize-schema=always
