Adds a NetworkEnvironment abstraction to hand out hostnames for various services

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -9,3 +9,7 @@ logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
 logging.level.com.google.cloud.sql.postgres.SocketFactory=OFF
 
 analyst.config.path=/config
+
+# Deployment Environment Properties
+env.project = dev
+env.type = docker-compose
