--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -15,3 +15,5 @@ analyst.pipeline.search-path = unittest/config/pipelines
 analyst.pipeline.default-import-pipelines = import-test
 analyst.pipeline.default-export-pipelines = export-test
 
+env.host-override.example-service = https://10.0.1.2
+
