--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -328,5 +328,13 @@ server.servlet.session.timeout=3600
 ### Must be set to 'always' for tables to be created.
 spring.session.jdbc.initialize-schema=always
 
+## Network Environment
 
+### The project name.
+env.project = dev
 
+### The type of environment
+env.type = docker-compose
+
+### An example service override
+env.host-override.example-service = https://10.0.1.2
