Exposed a /saml/options endpoint with some config options.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -74,6 +74,9 @@ archivist.security.saml.baseUrl = http://localhost:8066
 ### Set to true if the base URL is a proxy server that forwards requests to archivist.
 archivist.security.saml.baseUrlIsProxy = false
 
+### Enable Logout button for SAML users
+archivist.security.saml.logout = true
+
 ### Enable SAML discovery
 archivist.security.saml.discovery = true
 
