Some docker-compose changes for running locally.

--- a/localdev/zorroa-analyst-config/application.properties
+++ b/localdev/zorroa-analyst-config/application.properties
@@ -1,11 +1,6 @@
-analyst.storage.type = gcp
+analyst.storage.type = local
 
-analyst.scheduler.type = k8
-analyst.scheduler.k8.url = https://35.192.131.231
-analyst.scheduler.k8.username = admin
-analyst.scheduler.k8.password = naV9MHEL7S5nURLx
-analyst.scheduler.k8.namespace = default
-analyst.scheduler.k8.image = gcr.io/rmaas-dit-1/zpsgo:latest
+analyst.scheduler.type = local
 
 analyst.pipeline.search-path = /config/pipelines
 analyst.pipeline.default-import-pipelines = irm-dit1-import
@@ -14,4 +9,3 @@ analyst.pipeline.default-export-pipelines = irm-dit1-export
 spring.datasource.url = jdbc:postgresql://postgres/zorroa?currentSchema=analyst
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
-cdv.url=https://core-data-vault-api-dot-rmaas-dit-1.appspot.com/
