--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -7,9 +7,6 @@ archivist.organization.multiTenant = true
 
 es-routing-service.url = http://es:9200
 
-archivist.storage.types = gcp
-archivist.pubsub.type = gcp
-archivist.pubsub.gcp.subscription = projects/rmaas-dit-1/subscriptions/rmaas-zorroa-ingest-pipeline-us-dit1
-archivist.pubsub.gcp.project = rmaas-dit-1
+archivist.storage.types = local
+archivist.pubsub.type = local
 
-analyst.host = http://analyst:8080
