Added Analyst controller

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -95,6 +95,10 @@ archivist.security.saml.keystore.keyPassword = zorroa
 ### SAML import permissions/groups from SAML
 archivist.security.saml.permissions.import = true
 
+## Analyst Security
+
+archivist.security.analyst.ipRanges = .*
+
 ## Search Settings
 
 ### A key:value formatted list of boosted fields,foo:1.0,bar:2.0
