added pipelines back in

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -107,6 +107,17 @@ archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.desc
 ### The default sort fields in the format of field:direction,field:direction. Score is always first.
 archivist.search.sortFields = zorroa.timeCreated:DESC
 
+## Pipeline Settings
+
+### A comma delimited list of file paths to search for pipelines
+archivist.pipeline.search-path = config/pipelines
+
+### The default import pipeline
+archivist.pipeline.default-import-pipelines = standard-import
+
+### The default export pipeline.
+archivist.pipeline.default-export-pipelines = standard-export
+
 ## Export Settings
 
 ### The order in which to request HMTL5 video formats when streaming video
