--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -8,10 +8,8 @@ archivist.debug-mode.enabled = true
 
 es-routing-service.url = http://localhost:39200
 
+archivist.pipeline.search-path = unittest/config/pipelines
 
-#
-# Run the the web server and event server on different port.
-#
 server.port=7066
 #
 # Set the shared data path to the plugin installation spot.
