Added ability to map SAML groups to arbitrary zorroa perms.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -95,6 +95,9 @@ archivist.security.saml.keystore.keyPassword = zorroa
 ### SAML import permissions/groups from SAML
 archivist.security.saml.permissions.import = true
 
+### Map particular SAML groups to archivist Groups.  Format is foo=bar,bing=bang
+archivist.security.saml.permissions.map =
+
 ## Search Settings
 
 ### A key:value formatted list of boosted fields,foo:1.0,bar:2.0
