--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -8,7 +8,7 @@ archivist.debug-mode.enabled = true
 
 es-routing-service.url = http://localhost:39200
 
-
+archivist.security.saml.permissions.map = marketing=zorroa::librarian,sales=zorroa::admin
 #
 # Run the the web server and event server on different port.
 #
