Added endpoint logging in debug mode.

--- a/archivist/localdev/zorroa-archivist-config/application.properties
+++ b/archivist/localdev/zorroa-archivist-config/application.properties
@@ -1,4 +1,5 @@
-### All this stuff is wrong.
+archivist.debug-mode.enabled=true
+
 spring.datasource.url = jdbc:postgresql://postgres/zorroa?currentSchema=zorroa
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
