--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -296,6 +296,9 @@ logging.level.com.google.cloud.sql.postgres.SocketFactory=OFF
 ### Disable some google logging
 logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
 
+### Disable some google logging
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 ## Debug Configuration
 
 ### Set to true to enable debugging consoles for ES and H2
