Fixes actuator endpoints

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -15,7 +15,7 @@ archivist.organization.domain = zorroa.com
 
 ## Priamary DB configuration.
 
-### The SQL DB schema name.
+### The SQL DB schema name.`
 flyway.schemas=zorroa
 
 ### The SQL DB vendor.
@@ -191,14 +191,6 @@ es-routing-service.url = http://localhost:9200
 
 # Spring Settings
 
-## Mail Settings
-
-### The hostname of the mail server.
-spring.mail.host = mail3
-
-### The port the mail server is running on.
-spring.mail.port = 25
-
 ## Server Settings
 
 ### The default fully qualifed domain name.
@@ -242,32 +234,14 @@ management.security.enabled = true
 ### Determines if anonymous users can see health endpoints.
 management.security.roles = zorroa::everyone
 
-### Disable health check for Elastic, Spring does not support 2.2 yet.
-management.health.elasticsearch.enabled=false
-
 ### Disable all Spring Actuator endpoints by default
-endpoints.enabled=false
+management.endpoints.enabled-by-default=false
 
 ### Enable the /info endpoint
-endpoints.info.enabled=true
+management.endpoint.info.enabled=true
 
 ### Enable the /health endpoint
-endpoints.health.enabled=true
-
-### Enable the /metrics endpoint
-endpoints.metrics.enabled=true
-
-### Make all endpoints sensitive by default
-endpoints.sensitive=true
-
-### Make /info endpoint non-sensitive
-endpoints.info.sensitive=false
-
-### Make /health endpoint non-sensitive
-endpoints.health.sensitive=false
-
-### Make /metrics endpoint sensitive
-endpoints.metrics.sensitive=false
+management.endpoint.health.enabled=true
 
 ## Database Migration Settings
 
