Moved OFS under localdev

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -175,7 +175,7 @@ archivist.storage.minio.secretKey = miniostorage
 
 ## OFS Storage Settings
 
-archivivst.storage.ofs.path = shared/ofs
+archivivst.storage.ofs.path = localdev/shared/ofs
 
 # Maintenance Settings.
 
