Adds a GCP internal file service while also refactors some of the existing local file service.
The concepts of internal file storage(proxies) and external file storage(stuff ingestest from GCS) is now
more clearly defined.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -159,23 +159,13 @@ archivist.requests.managerEmail = admin@zorroa.com
 
 ## General storage settings
 
-### Type of object storage. The default is a locally running minio server
-archivist.storage.types = ofs,local,remote
+### The primary storage manager.  Options are gcs or local. For gcs, Archivist must be a storage admin.
+archivist.storage.type = local
 
-## Minio Storage Settings
+## Local file system storage Settings
 
-### The object store endpoint
-archivist.storage.minio.endpoint = http://localhost:9000
-
-### The object store access key
-archivist.storage.minio.accessKey = zorroa
-
-### The object store secret key
-archivist.storage.minio.secretKey = miniostorage
-
-## OFS Storage Settings
-
-archivivst.storage.ofs.path = localdev/shared/ofs
+### The path to store the local files
+archivist.storage.local.path = localdev/shared
 
 # Maintenance Settings.
 
