Setup docker-compose to use /shared dir

--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -8,6 +8,7 @@ archivist.organization.multiTenant = true
 
 es-routing-service.url = http://es:9200
 
-archivist.storage.types = local
+archivist.storage.type = local
 archivist.pubsub.type = local
 
+archivist.storage.local.path=/shared
