--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     ports:
       - 8080:8080
     volumes:
+      - "./localdev/shared:/shared"
       - "./localdev/zorroa-archivist-config:/config"
       - "./archivist/target:/service"
     environment:
