--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,16 @@
     <name>zorroa-server</name>
     <description>Zorroa Platform Application Server</description>
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <properties>
         <junit.version>4.12</junit.version>
         <java.version>1.8</java.version>
