Only spin up 1 postgres server, makes it easier to poke around data simply by changing schemas

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,5 +1,6 @@
 
-spring.datasource.url = jdbc:postgresql://localhost:35432/zorroa?currentSchema=zorroa
+flyway.schemas=unittest40
+spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=unittest40
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
 
