Implemented pub/sub file queue.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -117,10 +117,10 @@ archivist.search.sortFields = zorroa.timeCreated:DESC
 archivist.pipeline.search-path = config/pipelines
 
 ### The default import pipeline
-archivist.pipeline.default-import-pipelines = standard-import
+archivist.pipeline.default-import-pipeline = standard-import
 
 ### The default export pipeline.
-archivist.pipeline.default-export-pipelines = standard-export
+archivist.pipeline.default-export-pipeline= standard-export
 
 ## Export Settings
 
@@ -285,14 +285,25 @@ curator.lightbox.zoom-max =
 
 ## PubSub Settings
 
-### The subscription to listen to
-archivist.pubsub.type = local
+### The type of pubsub system. Set to disabled to disable.
+archivist.pubsub.type = disabled
 
 ### The name of the google pubsub subscription
 archivist.pubsub.gcp.subscription = subscription
 
-### The name of the google projcet
+### The name of the google project
 archivist.pubsub.gcp.project = project
+
+## FileQueue Settings
+
+### Interval at which to check the file queue.
+archivist.file-queue.check-interval-seconds= 10
+
+### Interval at which to check the file queue.
+archivist.file-queue.startup-delay-seconds = 20
+
+### The batch size of each file queue job.
+archivist.file-queue.batch-size = 50
 
 ## Exports
 
