Added concept of directory layout providers to handle path creation.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -2,8 +2,11 @@
 
 ## Global Configuration Options
 
+### The base path where the Archivist will look for its supporting directory structure.
+archivist.path.home=.
+
 ### Config directory path.
-archivist.config.path = /config
+archivist.config.path = ${archivist.path.home}/config
 
 ## Default Organization Settings
 
@@ -114,7 +117,7 @@ archivist.search.sortFields = zorroa.timeCreated:DESC
 ## Pipeline Settings
 
 ### A comma delimited list of file paths to search for pipelines
-archivist.pipeline.search-path = config/pipelines
+archivist.pipeline.search-path = ${archivist.path.home}/config/pipelines
 
 ### The default import pipeline
 archivist.pipeline.default-import-pipeline = standard-import
@@ -164,8 +167,9 @@ archivist.storage.type = local
 
 ## Local file system storage Settings
 
-### The path to store the local files
-archivist.storage.local.path = localdev/shared
+### The path or URI where customer files are stored, proxies, exports, etc.  For GCS just ignore this
+### and make a gcp_project_zorroa_data bucket
+archivist.storage.path = ${archivist.path.home}/shared
 
 # Maintenance Settings.
 
