--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,4 +1,9 @@
 
+#
+# Set the shared data path to the plugin installation spot.
+#
+archivist.path.home=unittest
+
 flyway.schemas=unittest40
 spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=unittest40
 spring.datasource.username=zorroa
@@ -17,10 +22,6 @@ archivist.security.saml.permissions.map = marketing=zorroa::librarian,sales=zorr
 # Run the the web server and event server on different port.
 #
 server.port=7066
-#
-# Set the shared data path to the plugin installation spot.
-#
-archivist.path.shared=../unittest/shared
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
