--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -112,7 +112,7 @@ archivist.security.analyst.ipRanges = .*
 archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.description:1.0
 
 ### The default sort fields in the format of field:direction,field:direction. Score is always first.
-archivist.search.sortFields = zorroa.timeCreated:DESC
+archivist.search.sortFields = system.timeCreated:DESC
 
 ## Pipeline Settings
 
