Configure storage bucket via config file and not env.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -167,9 +167,11 @@ archivist.storage.type = local
 
 ## Local file system storage Settings
 
-### The path or URI where customer files are stored, proxies, exports, etc.  For GCS just ignore this
-### and make a gcp_project_zorroa_data bucket
+### The path or URI where customer files are stored, proxies, exports, etc.  For GCS use archivist.storage.bucket
 archivist.storage.path = ${archivist.path.home}/shared
+
+### The GCS/AWS bucket where files are stored.  For local file systems you can ignore this.
+archivist.storage.bucket = ${env.project}-zorroa-data
 
 # Maintenance Settings.
 
