Added support for image based watermark.
To test this, set the archivist.watermark.image-path option to a valid image path and restart
the server. The server should log: loading watermark image: <path> at startup.  Login with a non-admin user with no zorroa::export permission to see watermarks.
:

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -150,6 +150,12 @@ archivist.watermark.scale = 1.0
 ### The font for the watermark
 archivist.watermark.font-name = Arial Black
 
+### Path to image to overlay
+archivist.watermark.image-path =
+
+### Scale the watermark image to this size relative the original image.
+archivist.watermark.image-scale = 0.2
+
 ## Dynamic Hierarchy  Settings
 archivist.dyhi.maxFoldersPerLevel=2048
 
