Added the concept of watched fields.
Tried to also consolidate audit-logging into some main areas.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -264,6 +264,9 @@ spring.jackson.default-property-inclusion=non_null
 
 ## Logging Options
 
+### Log changes to specific fields.
+archivist.auditlog.watched-fields =
+
 ### Disable the overly verbose Catalina logging.
 logging.level.org.apache.catalina=OFF
 
