Added fixes for testing against IRM servers.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -27,3 +27,11 @@ spring.mail.username=smtp@zorroa.com
 spring.mail.password=yaqoxjsmuyqvdxof
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Settings needed for testing against DIT2
+#archivist.assetStore.type = irm
+#archivist.storage.type = gcs
+#archivist.storage.bucket = rmaas-dit-2-zorroa-data
+#env.host-override.core-data-vault-api=https://cdvapi.dit2.ironmountainconnect.com
+#env.project = rmaas-dit-2
+#env.type = static-vm
