--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
 
   # Elastic Search instance used by the unit tests.
   test-es:
-    image: "zorroa-elasticsearch-single:latest"
+    build:
+      context: elasticsearch
+      args:
+        node_type: single
     ports:
       - "39200:9200"
       - "39300:9300"
@@ -53,7 +56,7 @@ services:
 
   # Local Archivist server.
   analyst:
-    image: "zorroa/zorroa-analyst:latest"
+    build: ../zorroa-plugin-sdk
     links:
        - "archivist"
     ports:
@@ -63,7 +66,7 @@ services:
       - "../zorroa-test-data:/zorroa-test-data"
 
   curator:
-     image: "zorroa-js-curator"
+     build: ../zorroa-js-curator
      user: node
      ports:
        - 80:8081
