--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -262,6 +262,9 @@ flyway.locations=classpath:db/migration/postgresql
 ### Disables serializing null values.
 spring.jackson.default-property-inclusion=non_null
 
+### Allows case insensitive enums
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS = true 
+
 ## Logging Options
 
 ### Log changes to specific fields.
