--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
 
-  # Postgres instance used for local devleopment servers.
+  # Postgres instance used for local development servers.
   postgres:
     image: "postgres:9.6.9"
     ports:
