Refactored the basic ES index routing to something a bit more advanced for future handling of org specific ES clusters.  It doesn't support this feature now but it can.
The new ES cluster setting is:
archivist.index.default-url = url

Other main fix is that the index is now created automatically at startup.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -186,14 +186,19 @@ archivist.storage.bucket = ${env.project}-zorroa-data
 ### Remove shared links after N days
 archivist.maintenance.sharedLinks.expireDays = 7
 
-# External Services
+## ElasticSearch Options
 
-# ElasticSearch Routing Service
+### The default ES cluster URL
+archivist.index.default-url = http://localhost:9200
 
-### The URL to the ES routing service. The routing service determines where
-### customer data goes.
+### Set to True if Archivist should attempt to create the default index at startup
+archivist.index.auto-create-index = true
 
-es-routing-service.url = http://localhost:9200
+### The default number of ES shards
+archivist.index.shards = 5
+
+### The default number of ES replica shards
+archivist.index.replicas = 2
 
 # Spring Settings
 
