--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,5 +1,10 @@
 
 #
+# The unit tests handle creating a new index for each test, so this can be disabled.
+#
+archivist.index.auto-create-index = false
+
+#
 # Set the shared data path to the plugin installation spot.
 #
 archivist.path.home=unittest
