--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=zorroa
 
 archivist.organization.multiTenant = true
 
-es-routing-service.url = http://es:9200
+archivist.index.default-url = http://es:9200
 
 archivist.storage.type = local
 archivist.pubsub.type = local
