--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -109,7 +109,7 @@ archivist.security.analyst.ipRanges = .*
 ## Search Settings
 
 ### A key:value formatted list of boosted fields,foo:1.0,bar:2.0
-archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.description:1.0
+archivist.search.keywords.boost = media.title:2.0, media.description:1.0
 
 ### The default sort fields in the format of field:direction,field:direction. Score is always first.
 archivist.search.sortFields = system.timeCreated:DESC
