Always convert the http error response to json.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -225,6 +225,9 @@ server.undertow.buffer-size=16384
 ### Whether to allocate buffers outside the Java heap.
 server.undertow.direct-buffers=true
 
+### Disable the whitelabel error page.
+server.error.whitelabel.enabled = false
+
 ## File Upload Settings
 
 ### Disable multi-part processing as we're handling this manually.
