Added additional metrics and counters around jobs and file queue.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -234,22 +234,10 @@ server.error.whitelabel.enabled = false
 ### to utilize file streams
 spring.http.multipart.enabled=false
 
-## Heath and Management
+## Management
 
-### Determines if anonymous users can see health endpoints.
-management.security.enabled = true
-
-### Determines if anonymous users can see health endpoints.
-management.security.roles = zorroa::everyone
-
-### Disable all Spring Actuator endpoints by default
-management.endpoints.enabled-by-default=false
-
-### Enable the /info endpoint
-management.endpoint.info.enabled=true
-
-### Enable the /health endpoint
-management.endpoint.health.enabled=true
+### Enable the metrics endpoint.  Super admin is required to view.
+management.endpoints.web.exposure.include=metrics
 
 ## Database Migration Settings
 
