--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -6,13 +6,13 @@
         <relativePath>../pom.xml</relativePath>
         <groupId>com.zorroa</groupId>
         <artifactId>zorroa-server</artifactId>
-        <version>0.40.0-SNAPSHOT</version>
+        <version>0.40.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ldap</artifactId>
     <packaging>jar</packaging>
-    <version>0.40.0-SNAPSHOT</version>
+    <version>0.40.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
