--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>com.zorroa.security</groupId>
     <artifactId>saml</artifactId>
-    <version>0.40.0-SNAPSHOT</version>
+    <version>0.40.2</version>
 
     <parent>
         <relativePath>../pom.xml</relativePath>
         <groupId>com.zorroa</groupId>
         <artifactId>zorroa-server</artifactId>
-        <version>0.40.0-SNAPSHOT</version>
+        <version>0.40.2</version>
     </parent>
 
     <properties>
