--- a/es-kwconf/pom.xml
+++ b/es-kwconf/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>zorroa-server</artifactId>
         <groupId>com.zorroa</groupId>
-        <version>0.40.0-SNAPSHOT</version>
+        <version>0.40.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
