Added info and health back info actuator.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -237,7 +237,7 @@ spring.http.multipart.enabled=false
 ## Management
 
 ### Enable the metrics endpoint.  Super admin is required to view.
-management.endpoints.web.exposure.include=metrics
+management.endpoints.web.exposure.include=metrics,info,health
 
 ## Database Migration Settings
 
