Update to spring-boot version 2.1.1
EVI-1409
In Spring 2.1.1 bean overriding is disabled by default to prevent a bean being accidentally overridden.
This patch also sets spring.main.allow-bean-definition-overriding=true.
It would be good to understand why this is needed.
Also needed explicit versioning of elasticsearch-rest-client.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -204,6 +204,9 @@ archivist.index.replicas = 2
 
 ## Server Settings
 
+### Continue to use the pre 2.1 spring-boot behavior allowing bean definitions to be overriden
+spring.main.allow-bean-definition-overriding=true
+
 ### The default fully qualifed domain name.
 server.fqdn=localhost
 
