--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <java.version>1.8</java.version>
         <elasticsearch.version>6.2.4</elasticsearch.version>
         <zorroa-server.version>0.40.3-SNAPSHOT</zorroa-server.version>
-        <spring-boot.version>2.0.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.1.RELEASE</spring-boot.version>
         <kotlin.version>1.3.10</kotlin.version>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     </properties>
@@ -113,6 +113,12 @@
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+
+             <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-client</artifactId>
                 <version>${elasticsearch.version}</version>
             </dependency>
 
