Updates the default config to change flyway.schemas to spring.flyway.schemas

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -19,7 +19,7 @@ archivist.organization.domain = zorroa.com
 ## Priamary DB configuration.
 
 ### The SQL DB schema name.`
-flyway.schemas=zorroa
+spring.flyway.schemas=zorroa
 
 ### The SQL DB vendor.
 archivist.datasource.primary.vendor=postgresql
