Fixes some settings broken by the Spring Boot 2.1.1 update.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -242,6 +242,9 @@ spring.http.multipart.enabled=false
 ### Enable the metrics endpoint.  Super admin is required to view.
 management.endpoints.web.exposure.include=metrics,info,health
 
+### Disable ES health checks.
+management.health.elasticsearch.enabled=false
+
 ## Database Migration Settings
 
 ### Check that a migration script location exists.
