--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -9,7 +9,7 @@ archivist.index.auto-create-index = false
 #
 archivist.path.home=unittest
 
-flyway.schemas=unittest40
+spring.flyway.schemas=unittest40
 spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=unittest40
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
