--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -181,10 +181,16 @@ archivist.storage.bucket = ${env.project}-zorroa-data
 
 # Maintenance Settings.
 
-## Clean ups
+## Data clean ups
 
-### Remove shared links after N days
+### Set to true if data cleanups are enabled on this archivist.
+archivist.maintenance.enabled = true
+
+### Number of days before shared links are expired. (deprecated)
 archivist.maintenance.sharedLinks.expireDays = 7
+
+### Archive jobs with no activity after N days
+archivist.maintenance.archive-jobs-after-days = 30
 
 ## ElasticSearch Options
 
