Move standard pipelines into jar file and add the classpath spot as a search path.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -117,7 +117,7 @@ archivist.search.sortFields = system.timeCreated:DESC
 ## Pipeline Settings
 
 ### A comma delimited list of file paths to search for pipelines
-archivist.pipeline.search-path = ${archivist.path.home}/config/pipelines
+archivist.pipeline.search-path = classpath:/pipelines,${archivist.path.home}/config/pipelines
 
 ### The default import pipeline
 archivist.pipeline.default-import-pipeline = standard-import
