--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -167,6 +167,12 @@
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-elastic</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
         <!-- 2.5x faster at loading jpegs in watermark case -->
         <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId>
