--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -245,6 +245,9 @@ management.endpoints.web.exposure.include=metrics,info,health
 ### Disable ES health checks.
 management.health.elasticsearch.enabled=false
 
+### Send metrics into elasticsearch (docker-compose link)
+management.metrics.export.elastic.host=http://es:9200
+
 ## Database Migration Settings
 
 ### Check that a migration script location exists.
