--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 
-version: '3'
+version: '3.6'
 services:
 
   ## Unit testing services.
@@ -59,6 +59,33 @@ services:
       POSTGRES_DB: zorroa
       PGDATA: /var/lib/postgresql/data/pgdata
 
+  # Local Logstash server.
+  logstash:
+    image: docker.elastic.co/logstash/logstash-oss:6.2.4
+    depends_on:
+      - "es"
+    ports:
+      - "5044:5044"
+      - "9600:9600"
+    secrets:
+      - source: logstash.conf
+        target: /usr/share/logstash/pipeline/logstash.conf
+    healthcheck:
+      test: bin/logstash -t
+      interval: 60s
+      timeout: 50s
+      retries: 5
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana-oss:6.2.4
+    secrets:
+      - source: kibana.yml
+        target: /usr/share/kibana/config/kibana.yml
+    ports:
+      - "5601:5601"
+    depends_on:
+      - "es"
+
   # Local Archivist server.
   archivist:
     links:
@@ -95,3 +122,9 @@ services:
          NODE_ENV: "production"
          ARCHIVIST_API_URL: "http://archivist:8080"
          CURATOR_PORT_SECURE: "8443"
+
+secrets:
+  logstash.conf:
+    file: ./config/logstash.conf
+  kibana.yml:
+    file: ./config/kibana.yml
