--- a/config/logstash.conf
+++ b/config/logstash.conf
@@ -7,8 +7,6 @@ input {
 output {
   elasticsearch {
     hosts => ["http://es:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-    #user => "elastic"
-    #password => "changeme"
+    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM}"
   }
 }
